[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/level.gd" type="Script" id=1]
[ext_resource path="res://scenes/shadows.gd" type="Script" id=2]
[ext_resource path="res://art/searock.jpg" type="Texture" id=3]
[ext_resource path="res://scenes/camera.gd" type="Script" id=4]
[ext_resource path="res://gui/plus.png" type="Texture" id=5]
[ext_resource path="res://gui/plus_pressed.png" type="Texture" id=6]
[ext_resource path="res://gui/plus_hover.png" type="Texture" id=7]
[ext_resource path="res://scenes/NewGame.gd" type="Script" id=8]
[ext_resource path="res://gui/return.png" type="Texture" id=9]
[ext_resource path="res://gui/return_pressed.png" type="Texture" id=10]
[ext_resource path="res://gui/return_hover.png" type="Texture" id=11]
[ext_resource path="res://gui/return_disabled.png" type="Texture" id=12]
[ext_resource path="res://scenes/Undo.gd" type="Script" id=13]
[ext_resource path="res://gui/zoom.png" type="Texture" id=14]
[ext_resource path="res://gui/zoom_pressed.png" type="Texture" id=15]
[ext_resource path="res://gui/zoom_hover.png" type="Texture" id=16]
[ext_resource path="res://scenes/HighlightMoves.gd" type="Script" id=17]
[ext_resource path="res://gui/question.png" type="Texture" id=18]
[ext_resource path="res://gui/question_pressed.png" type="Texture" id=19]
[ext_resource path="res://gui/question_hover.png" type="Texture" id=20]
[ext_resource path="res://scenes/Info.gd" type="Script" id=21]
[ext_resource path="res://scenes/victory.gd" type="Script" id=22]

[node name="level" type="Node2D"]
script = ExtResource( 1 )

[node name="shadows" type="Node2D" parent="."]
z_index = -100
script = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 281.25, 436.918 )
scale = Vector2( 1.63346, 1.90593 )
z_index = -4096
z_as_relative = false
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 300, 382.5 )
current = true
script = ExtResource( 4 )

[node name="Menu" type="HBoxContainer" parent="."]
margin_top = -50.0
margin_right = 158.0
__meta__ = {
"_edit_lock_": true
}

[node name="NewGame" type="TextureButton" parent="Menu"]
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
script = ExtResource( 8 )

[node name="confirm" type="ConfirmationDialog" parent="Menu/NewGame"]
margin_left = 182.0
margin_top = 380.0
margin_right = 476.0
margin_bottom = 450.0
window_title = ""
dialog_text = "Are you sure you want to start a new game?"

[node name="Undo" type="TextureButton" parent="Menu"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
texture_disabled = ExtResource( 12 )
script = ExtResource( 13 )

[node name="HighlightMoves" type="TextureButton" parent="Menu"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 50.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )
script = ExtResource( 17 )

[node name="Info" type="TextureButton" parent="Menu"]
margin_left = 162.0
margin_right = 212.0
margin_bottom = 50.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 20 )
script = ExtResource( 21 )

[node name="instructions" type="PopupPanel" parent="Menu/Info"]
margin_left = 9.0
margin_top = 115.0
margin_right = 357.0
margin_bottom = 471.0

[node name="text" type="RichTextLabel" parent="Menu/Info/instructions"]
margin_left = 4.0
margin_top = 4.0
margin_right = 344.0
margin_bottom = 352.0
bbcode_enabled = true
bbcode_text = "RULES:

1. You may move a card on top of a neighboring pile provided there is a card of the same suit or rank in that direction.

2. Only the top card counts towards whether a card may be moved.

3. You may only move the top card of a pile.

4. No card may be placed on empty spaces.

5. If a card is placed directly on top of another card of the same suit or rank, both cards are immediately discarded.

6. Discard all cards to win!

Hint: Hold the magnifying glass button to darken immovable cards.."
text = "RULES:

1. You may move a card on top of a neighboring pile provided there is a card of the same suit or rank in that direction.

2. Only the top card counts towards whether a card may be moved.

3. You may only move the top card of a pile.

4. No card may be placed on empty spaces.

5. If a card is placed directly on top of another card of the same suit or rank, both cards are immediately discarded.

6. Discard all cards to win!

Hint: Hold the magnifying glass button to darken immovable cards.."

[node name="Win" type="Tween" parent="."]
playback_process_mode = 0

[node name="victory" type="Sprite" parent="."]
visible = false
position = Vector2( 300, 400 )
scale = Vector2( 4, 5 )
script = ExtResource( 22 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="Menu/NewGame" to="Menu/NewGame" method="_on_NewGame_pressed"]
[connection signal="confirmed" from="Menu/NewGame/confirm" to="Menu/NewGame" method="_on_confirm_confirmed"]
[connection signal="pressed" from="Menu/Undo" to="Menu/Undo" method="_on_Undo_pressed"]
[connection signal="pressed" from="Menu/Info" to="Menu/Info" method="_on_Info_pressed"]
[connection signal="tween_completed" from="Win" to="." method="_on_Win_tween_completed"]
